FIX: z-index for visability button so it is layered beneath the search bar

--- a/app/javascript/mi_locations/stylesheets/room_card2.sass
+++ b/app/javascript/mi_locations/stylesheets/room_card2.sass
@@ -86,7 +86,7 @@
       @apply  text-gray-700 flex
 
 .room-visibility-toggle
-  @apply px-2 bg-yellow-300 text-yellow-800 rounded-full text-sm self-center w-24  ml-4 absolute mt-6 z-50
+  @apply px-2 bg-yellow-300 text-yellow-800 rounded-full text-sm self-center w-24  ml-4 absolute mt-6 z-20
   &:hover
     @apply bg-yellow-400
   svg
